fix for mis aligned controls and timeline text markers

--- a/web/app/components/attack-timeline/style.module.scss
+++ b/web/app/components/attack-timeline/style.module.scss
@@ -141,7 +141,7 @@
   position: absolute;
   height: 50px;
   top: -55px;
-  left: -14px;
+  left: -10px;
 
   &.splitIndicatorBottom {
     transform: rotate(180deg);
